--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
+# Core ML and Data Science
 numpy 
 pandas 
 scikit-learn 
 matplotlib 
 seaborn 
 jupyter
+joblib
+
+# Backend API and OCR
+Flask==2.3.3
+Flask-CORS==4.0.0
+opencv-python==4.8.1.78
+pytesseract==0.3.10
+Pillow==10.0.1
+python-dateutil==2.8.2
+requests==2.31.0
