--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,7 @@ Pillow>=10.0.0
 scikit-learn>=1.3.0
 joblib>=1.3.0
 python-dateutil>=2.8.0
+pdfplumber>=0.10.0
+PyPDF2>=3.0.0
+PyMuPDF>=1.23.0
+requests>=2.31.0
